<resources>
    <string name="app_name">Kardyo</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="copyright_info">Kardyo Copyright © 2017</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_hint">Enter username or email</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="login_title">SIGN IN</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup">Sign up</string>
    <string name="SignupToHome">Home</string>
    <string name="title_activity_patient_profile">PatientProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="LoginToHome">Home</string>
    <string name="BsignText">Signup</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="Signpassword">Password</string>
    <string name="esp_ip">Esp_ip</string>
    <string name="esp_port">Esp_port</string>
    <string name="wifi_on_off">WiFi ON/OFF</string>
    <string name="led_3">LED 3</string>
    <string name="led_2">LED 2</string>
    <string name="led_1">LED 1</string>
    <string name="SignInUsername">Username</string>
    <string name="SignInPassword">Password</string>
    <string name="patientBtnText">Patient</string>
    <string name="doctor_relativeBtnText">Doctor/Relative</string>
    <string name="signinemail">yesyoucan@gmail.com</string>
    <string name="signinpassword">youcan</string>
    <string name="homepage_about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    //string for status of the user doctor||patient||relative
    <string-array name="user_status">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Relative</item>
    </string-array>

    //string for gender
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_records">View Records</string>
    <string name="view_patients">View Patients</string>
    <string name="manage_doctor">Manage Doctor</string>
    <string name="manage_patient">Manage Patient</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="add_patient">Add Patient</string>
    <string name="logout">Logout</string>
    <string name="send_pin">Send Pin</string>
    <string name="new_name">Name</string>
    <string name="new_email">Email</string>
    <string name="new_contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="type_here">Type here...</string>
</resources>
