<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="503dp"
        tools:layout_editor_absoluteY="64dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/newName"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="55dp"
            android:text="Edit Profile"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="19dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newName" />

        <EditText
            android:id="@+id/newName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/new_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/saveChanges"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="New Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            tools:layout_editor_absoluteX="85dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/new_contact"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <Button
            android:id="@+id/cancelChanges"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="@color/buttonColor"
            android:text="@string/cancel"
            android:textColor="@color/buttontextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.251" />

        <Button
            android:id="@+id/saveChanges"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancelChanges"
            android:layout_alignLeft="@+id/cancelChanges"
            android:layout_alignStart="@+id/cancelChanges"
            android:layout_marginBottom="11dp"
            android:background="@color/buttonColor"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/buttontextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelChanges"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.251" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>