<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kardyobg1"
    tools:context="com.example.maxwell.kardyo.HomePage"
    tools:layout_editor_absoluteY="81dp">

    <include
        android:id="@+id/homepage_toolbar"
        layout="@layout/kardyo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        />

    <Button
        android:id="@+id/BlogIn"
        android:layout_width="160dp"
        android:layout_height="66dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:background="@color/buttonColor"
        android:text="@string/login_title"
        android:textColor="@color/buttontextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_toolbar" />

    <Button
        android:id="@+id/Bsignup"
        android:layout_width="156dp"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonColor"
        android:text="@string/sign_up"
        android:textColor="@color/buttontextColor"
        app:layout_constraintBottom_toBottomOf="@+id/TV_copyright"
        app:layout_constraintEnd_toEndOf="@+id/BlogIn"
        app:layout_constraintStart_toStartOf="@+id/BlogIn"
        app:layout_constraintTop_toBottomOf="@+id/BlogIn"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/TV_copyright"

        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:foreground="@android:color/transparent"
        android:paddingTop="5dp"
        android:text="@string/copyright_info"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="340dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="Welcome to Kardyo"
        android:textAlignment="center"
        android:textColor="@color/buttontextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_toolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="84dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/BlogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTv"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/kardyo_logo" />

</android.support.constraint.ConstraintLayout>
